--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/images/background.jpg");
+    background-image: url("../images/background.jpg");
     background-size: cover;
     background-position: top;
     height: 100vh;
